--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -9,7 +9,11 @@
     {% block content %}
     {% endblock content %}
 
+     {% include 'accounts/tagsms.html' %}
+
     {% include 'accounts/footer.html' %}
+
+
     {% include 'accounts/scripts.html' %}
 </body>
 
