--- a/accounts/templates/accounts/contact.html
+++ b/accounts/templates/accounts/contact.html
@@ -41,9 +41,9 @@
   </div>
 
 
-  <div class="jumbotron">
+  <!--<div class="jumbotron">
     <h1>We can <span>help build your</span> project!</h1>
     <p>Voluptatem accusantium doloremque laudantium sprea totam rem aperiam</p>
     <p><a class="btn btn-primary btn-lg" href="#" role="button">Get it now</a></p>
-  </div>
+  </div>-->
 {% endblock content %}
